# Gaara-discord-bot

./: README.md  ar.json  bar.json  bday.json  channel.json  filter.json  leave.json  lvle.json  main.py  prefixes.json  pyproject.toml  requirements.txt  rr.json  welcome.json
cogs/: 8ball.py  ClearKickBan.py  HiWelcome.py  JokeMeme.py  StarWars.py  animals.py  apiimages.py  avatar.py  birthday.py  chatbot.py  dm.py  economy.py  error.py  fight.py  games.py  gaw.py  images.py  info.py  inspire.py  member_join.py  music.py  music1.py  newhelp.py  ping.py  poll.py  rank.py  remind.py  roles.py  rr.py  saying_stuffPat.py  secret.py  slap.py  snipe.py  spam.py  spoonfeeding.py  warn.py
cogs/gifs/imgflip/: imgfliptop100.txt
cogs/images/data/: images.db
