[tool.poetry]
name = "mygrogubot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
aiofiles = "^0.6.0"
pymongo = "^3.11.3"
utils = "^1.0.1"
youtube-dl = "^2021.2.4"
replit = "^2.0.0"
wavelink = "^0.9.8"
wikipedia = "^1.4.0"
jishaku = "^1.20.0.220"
dnspython = "^2.1.0"
PyNaCl = "^1.4.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
